--- a/public/vercel.json
+++ b/public/vercel.json
@@ -15,9 +15,7 @@
     }
   ],
   "rewrites": [
-    {
-      "source": "/(.*)",
-      "destination": "/index.html"
-    }
+    { "source": "/", "destination": "/index.html" },
+    { "source": "/game", "destination": "/game.html" }
   ]
 }
